# corner-camera

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  README.md
cpp/demo/: CMakeLists.txt  run_pointgrey_infer.cpp  run_video_infer.cpp  run_webcam_infer.cpp  video_example.conf  webcam_example.conf
cpp/include/: CalibrationWindow.h  ConfigParser.h  Inference.h  PointGreyInference.h  RollingDisplay.h  VideoInference.h  WebCamInference.h
cpp/scratch/: CMakeLists.txt  binarylines.cpp  connectUSB.cpp  findFeatures.cpp  houghlines.cpp  lsdlines.cpp  makeAmat.cpp  matchFeatures.cpp  multichanMul.cpp  readFrame.cpp  runningMean.cpp  sampleRays.cpp  scratch_utils.cpp  selectRegion.cpp  streamVideo.cpp  test_sampleRays.m  trackCorner.cpp  viewImage.cpp  writeVideo.cpp
cpp/src/: CMakeLists.txt  CalibrationWindow.cpp  ConfigParser.cpp  Inference.cpp  PointGreyInference.cpp  RollingDisplay.cpp  VideoInference.cpp  WebCamInference.cpp
cpp/tests/: CMakeLists.txt  test_calibrate.cpp  test_config.cpp  test_infer_funcs.cpp  test_pointgrey.cpp  test_pointgrey_infer.cpp  test_utils.cpp  test_video_infer.cpp  test_webcam_infer.cpp
matlab/: estimateFrameNoise.m  getAmat.m  getInputProperties.m  getObsVec.m  mapFromRectified.m  mapToRectified.m  preprocessFrame.m  saveCornerData.m  saveHomographyData.m  saveMeanImage.m  saveMeanVideoFrame.m  scratch_amat.m  scratch_better_amat.m  scratch_corners.m  scratch_rectify.m  scratch_sampling.m  scratch_transform.m  setEvenArcXYLocs.m  setGridXYLocs.m  setObsXYLocs.m  setRaysXYLocs.m  solveHomography.m  tangentAngle.m  test_corner.m  test_run.m  test_stereo.m  videoRecon.m
matlab/example_params/: indoor_loc1.m  indoor_loc2.m  outdoor_bricks.m  outdoor_concrete.m
matlab/pyr/: blurDnClr.m  corrDn.m
